--- a/login.html
+++ b/login.html
@@ -16,7 +16,17 @@
 
 <body class="moving-volunteer">
     <div class="container">
-
+        <form action="/action_page.php" method="get">
+            <img src="images/volunteer.ng logo.svg" alt="">
+            <h2>WELCOME BACK</h2>
+            Email: <input type="text" type="email"><br>
+            Password: <input type="password" type="text"><br>
+            <a href="">Forgot password?</a><br>
+            <br>
+            <button>Login</button><br>
+            <br>
+            <p>Don't Have an account yet? <a href="">Sign Up</a></p>
+        </form>
     </div>
     </div>
 
