--- a/old/index.html
+++ b/old/index.html
@@ -57,8 +57,8 @@
       <h1>You can make a difference!</h1>
       <p>Commited to making the World a better place for Everyone</p>
       <p>
-        <a href="payment.html" class="main_link_button"> <i class="fa fa-heart"></i> Donate</a>
-        <a href="signup.html" class="main_link_button">
+        <a href="" class="main_link_button"> <i class="fa fa-heart"></i> Donate</a>
+        <a href="" class="main_link_button">
           <i class="fa fa-handshake"></i> I Need a Volunteer</a>
       </p>
     </div>
