--- a/old/signup.html
+++ b/old/signup.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Volunteer NG | Login</title>
+    <title>Volunteer NG | Sign Up</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
