Upgradded the styling of the signup page

--- a/signup.html
+++ b/signup.html
@@ -14,7 +14,9 @@
 </head>
 
 <body class="moving-volunteer">
+        <div class="overlay"></div>
         <div class="firstContainer">
+            
             <h1>Welcome to <span>VOLUNTEER.NG</span></h1>
             <div>
                 <hr class="horizontalLine">
@@ -38,5 +40,5 @@
             </form>
         </div>
     </div>
-
+</body>
 </html>
