Added and edited the styling in the signup page

--- a/signup.html
+++ b/signup.html
@@ -35,7 +35,7 @@
                 <input type="text" placeholder="Username" required>
                 <input type="email" placeholder="Email address" required>
                 <input type="password" placeholder="Password" required>
-                <input type="password" placeholder="Re-ennter Password" required>
+                <input type="password" placeholder="Re-enter Password" required>
                 <button type="submit">CREATE ACCOUNT</button>
             </form>
         </div>
