--- a/team/team.html
+++ b/team/team.html
@@ -75,6 +75,51 @@
     <section id="teams">
       <div class="container col-12"></div>
     </section>
+
+    <footer>
+      <div class="footer">
+        <div class="col-3">
+          <a href=""><i class="fa fa-phone"></i>+234 7071234567</a>
+          <a href=""><i class="fa fa-envelope"></i>volunteerng@gmail.com</a>
+          <a href=""><i class="fas fa-map-marker"></i>Find Us</a>
+        </div>
+        <div class="col-3">
+          <h3>Donations</h3>
+          <ul>
+            <li><i class="fas fa-arrow-right"></i>&nbsp; Food Donation</li>
+            <li><i class="fas fa-arrow-right"></i>&nbsp; Money Donation</li>
+            <li><i class="fas fa-arrow-right"></i>&nbsp; Water Supply</li>
+            <li><i class="fas fa-arrow-right"></i>&nbsp; Outfit Donation</li>
+            <li><i class="fas fa-arrow-right"></i>&nbsp; Food Item Donation</li>
+            <li><i class="fas fa-arrow-right"></i>&nbsp; Medical Donations</li>
+          </ul>
+        </div>
+        <div class="col-3">
+            <h3>Quick Links</h3>
+            <ul>
+              <li><i class="fas fa-arrow-right"></i>&nbsp; Our Team</li>
+              <li><i class="fas fa-arrow-right"></i>&nbsp; Testimonies</li>
+              <li><i class="fas fa-arrow-right"></i>&nbsp; Gallery</li>
+              <li><i class="fas fa-arrow-right"></i>&nbsp; About Us</li>
+        </div>
+        <div>
+          <h3>Stay Updated</h3>
+          <span>Subscribe to our newsletter</span>
+          <div class="input-field">
+            <form>
+            <input type="text">
+            <span class="submit"><i class="fas fa-arrow-right"></i></span>
+            </form>
+            </div>
+          <div class="inline">
+        <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; 
+        <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; 
+        <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; 
+        <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; 
+        </div>
+        </div>
+      </div>
+    </footer>
     <script src="./team.js"></script>
   </body>
 </html>
