--- a/signup.html
+++ b/signup.html
@@ -15,8 +15,22 @@
 </head>
 
 <body class="moving-volunteer">
-    <div class="container">
-
+    <div class="wrap">
+        <form>
+            <img src="images/volunteer.ng logo.svg" alt="">
+            <h2>Creat an Account</h2>
+            <p><a href="">Click here to Sing Up as an Organization</a></p>
+            <input type="text" type="text" placeholder="First name..." required><br>
+            <input type="text" type="text" placeholder="Last name..." required><br>
+            <input type="text" type="email" placeholder="Email..." required><br>
+            <input type="password" type="text" placeholder= "Password..."required><br>
+            <input type="password" type="text" placeholder= "Re-enter Password..."required><br>
+            <a href="">Forgot password?</a><br>
+            <br>
+            <button><a href= "">Sign Up</a></button><br>
+            <br>
+            <p>Aready have an account? <a href="">Sign In</a></p>
+        </form>
     </div>
     </div>
 
