--- a/signup.html
+++ b/signup.html
@@ -1,42 +1,78 @@
 <!DOCTYPE html>
-<html lang=en>
+<html>
+    <head> 
+        <title> SignUp Page</title>
+        <link rel="stylesheet" href="signup.css">
+    </head>
+    <body>
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Volunteer NG | Sign Up</title>
-    <link rel="stylesheet" href="./css/signup.css" />
-    <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
-    <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
-    <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
+        <div class="row">
+            <div class="col-6">
+                <div class="section1"> 
+                   <img src="signup-photo.jpg" alt="">
+                   
+                    <div class="section-1a"> <a href="">&#128473;</a> 
+                       <h1> Welcome to <br> <span>volunteer.ng</span></h1>
+                          <hr> <br>
+                       <p> There are many variations of <br> passages of Lorem Ipsum available, <br> but the majority has suffered <br> alteration in some form, by injected <br> humouror randomised words which <br> don't look even slightly believable.
+                       </p>
+                </div>
+                </div>
 
-</head>
-
-<body class="moving-volunteer">
-        <div class="firstContainer">
-            <h1>Welcome to <span>VOLUNTEER.NG</span></h1>
-            <div>
-                <hr class="horizontalLine">
             </div>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour randomised words which don't look even slightly believeable.
-            </p>
+            <div class="col-6">
+                <div class="section2">
+                    <div class="section2a">
+                        <h1>Create an account </h1> <hr> <br>
+
+                        <h2>Don't have an account? It takes less than a minute. If you already have an account <a href="login.html">Login</a> </h2>
+
+                        <form action="">
+                            <div>
+                                <input class="inputbox" type="text" placeholder="Firstname" > <br> <br>
+
+                                <input class="inputbox" type="text" placeholder="Lastname" > <br> <br>
+
+                                <input class="inputbox" type="text" placeholder="Username" > <br> <br>
+
+                                <input class="inputbox" type="email" placeholder="Email Address"> <br> <br>
+
+                                <input class="inputbox" type="password" placeholder="Password" > <br> <br>
+
+                                <input class="inputbox" type="password" placeholder="Re-enter Password" > <br> <br>
+
+                                 <button> Create Account</button>
+
+                            </div>
+
+
+
+                        </form>
+                    </div>
+
+
+                </div>
+
+            </div>
+
+
+
+
         </div>
-        <div class="secondContainer">
-            <h2>Create an account</h2>
-            <hr class="horizontalLine2">
-            <p>Don't have an account? It takes less than a minute. If you already have an account <a href="login.html">Login.</a></p>
-            <form action="">
-                <input type="text" placeholder = "Firstname" required>
-                <input type="text" placeholder="Lastname" required>
-                <input type="text" placeholder="Username" required>
-                <input type="email" placeholder="Email address" required>
-                <input type="password" placeholder="Password" required>
-                <input type="password" placeholder="Re-ennter Password" required>
-                <button type="submit">CREATE ACCOUNT</button>
-            </form>
-        </div>
-    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
+    </body>
 
 </html>
