--- a/signup.html
+++ b/signup.html
@@ -14,29 +14,32 @@
 </head>
 
 <body class="moving-volunteer">
-        <div class="firstContainer">
-            <h1>Welcome to <span>VOLUNTEER.NG</span></h1>
-            <div>
-                <hr class="horizontalLine">
-            </div>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
-                alteration in some form, by injected humour randomised words which don't look even slightly believeable.
-            </p>
+    <div class="firstContainer">
+        <h1>Welcome to <span>VOLUNTEER.NG</span></h1>
+        <div>
+            <hr class="horizontalLine">
         </div>
-        <div class="secondContainer">
-            <h2>Create an account</h2>
-            <hr class="horizontalLine2">
-            <p>Don't have an account? It takes less than a minute. If you already have an account <a href="login.html">Login.</a></p>
-            <form action="">
-                <input type="text" placeholder = "Firstname" required>
-                <input type="text" placeholder="Lastname" required>
-                <input type="text" placeholder="Username" required>
-                <input type="email" placeholder="Email address" required>
-                <input type="password" placeholder="Password" required>
-                <input type="password" placeholder="Re-ennter Password" required>
-                <button type="submit">CREATE ACCOUNT</button>
-            </form>
-        </div>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+            alteration in some form, by injected humour randomised words which don't look even slightly believeable.
+        </p>
+    </div>
+    <div class="secondContainer">
+        <h2>Create an account</h2>
+        <hr class="horizontalLine2">
+        <p>Don't have an account? It takes less than a minute. If you already have an account <a
+                href="login.html">Login.</a></p>
+        <form action="">
+            <input type="text" placeholder="Full Name" required>
+            <input type="email" placeholder="Email address" required>
+            <input type="password" placeholder="Password" required>
+            <input type="password" placeholder="Re-enter Password" required>
+            <input type="text" placeholder="Title" required>
+            <input type="text" placeholder="About what you want" required>
+            <input type="text" placeholder="Amount" required>
+
+            <button type="submit">CREATE ACCOUNT</button>
+        </form>
+    </div>
     </div>
 
 </html>
