--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <header>
     <div class="container">
       <div id="branding">
-        <img src="images/logo.png" width="120" height="70" />
+        <img src="images/logo.png" width="165" height="70" <!--k/>
       </div>
       <nav>
         <ul>
