Edits to the index and entities pages

--- a/entities.html
+++ b/entities.html
@@ -67,7 +67,7 @@
         <div class="shadow">
             <div class="entity">
                 <div class="col-2">
-                    <img src="images/disaster.jpg">
+                    <img src="images/startdotng project/pictures/black-seminarian.jpg">
                 </div>
                 <div class="col-10">
                     <span class="entity-text"> Jude Jonathan </span> <br>
