--- a/index.html
+++ b/index.html
@@ -59,10 +59,8 @@
       <h1>You can make a difference!</h1>
       <p>Commited to making the World a better place for Everyone</p>
       <p>
-        <a href="payment.html" class="main_link_button">
-          <i class="fa fa-heart"></i> Donate</a>
-        <a href="signup.html" class="main_link_button">
-          <i class="fa fa-handshake"></i> I Need a Volunteer</a>
+        <a href="payment.html" class="main_link_button"> Donate</a>
+        <a href="signup.html" class="main_link_button"> I Need a Volunteer</a>
       </p>
     </div>
   </section>
@@ -139,7 +137,7 @@
         <div style="clear: both"></div>
       </div>
       <div class="box">
-        <img src="./images/disaster.jpg" />
+        <img src="./images/cleanwater.jpg" />
         <h3>Provide Clean Water</h3>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi
