Modified the icons in the header

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 <body>
   <!-- Top Header -->
   <div class="topmost-nav">
-    <div class="left col-3">
-      <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-      <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-      <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-      <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
+    <div class="left col-3 space-evenly">
+      <a href="" class="flex-item"><i class="fab fa-facebook"></i></a>
+      <a href="" class="flex-item"><i class="fab fa-instagram"></i></a>
+      <a href="" class="flex-item"><i class="fab fa-twitter"></i></a>
+      <a href="" class="flex-item"><i class="fab fa-youtube"></i></a>
     </div>
     <div class="right col-6">
       <a href="tel:7071234567"><i class="fa fa-phone"></i> +234 7071234567</a>
@@ -46,7 +46,7 @@
           </li>
           <li class="auth_button">
             <a href="signup.html">
-              <i class="fa fa-person-booth"></i> Sign Up</a>
+              <i class="fa fa-person-booth"></i>Sign Up</a>
           </li>
         </ul>
       </nav>
