Moved the styles for the homepage into style.css

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
   <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./team/team.css" />
+  <!-- <link rel="stylesheet" href="./team/team.css" /> -->
   <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
   <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
 </head>
@@ -17,15 +17,19 @@
 <body>
   <!-- Top Header -->
   <div class="topmost-nav">
-    <div class="left col-3 space-evenly">
-      <a href="" class="flex-item"><i class="fab fa-facebook"></i></a>
-      <a href="" class="flex-item"><i class="fab fa-instagram"></i></a>
-      <a href="" class="flex-item"><i class="fab fa-twitter"></i></a>
-      <a href="" class="flex-item"><i class="fab fa-youtube"></i></a>
-    </div>
-    <div class="right col-6">
-      <a href="tel:7071234567"><i class="fa fa-phone"></i> +234 7071234567</a>
-      <a href="mailto:volunteerng@gmail.com"><i class="fa fa-envelope"></i> volunteerng@gmail.com</a>
+    <div class="container">
+      <div style="float: left">
+          <!-- class="left col-3 space-evenly" -->
+        <a href="" class="flex-item"><i class="fab fa-facebook"></i></a>
+        <a href="" class="flex-item"><i class="fab fa-instagram"></i></a>
+        <a href="" class="flex-item"><i class="fab fa-twitter"></i></a>
+        <a href="" class="flex-item"><i class="fab fa-youtube"></i></a>
+      </div>
+      <div style="float: right">
+        <!-- class="right col-6" -->
+        <a href="tel:7071234567" class="flex-item"><i class="fa fa-phone"></i> +234 7071234567</a>
+        <a href="mailto:volunteerng@gmail.com" class="flex-item"><i class="fa fa-envelope"></i> volunteerng@gmail.com</a>
+      </div>
     </div>
   </div>
 
