Refactored homepage according to the documentation.
I have refactored the markup and styles for the homepage to conform to the guidelines specified in the README.

--- a/team.html
+++ b/team.html
@@ -2,35 +2,34 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VolunteerNG | Our Team</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
-    <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
-    <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
-    <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="./css/pages/index.css" />
+  <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
+  <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
+  <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
+  <link rel="icon" href="images/favicon.png" sizes="16x16" type="image/png" />
+  <title>VolunteerNG | Our Team</title>
 </head>
 
 <body>
-
     <!-- Top Header -->
     <div class="top-header">
-        <div class="container">
-            <div id="branding">
-                <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
-                <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
-            </div>
-            <nav>
-                <ul>
-                    <li class="current"><i class="fa fa-phone"></i> +234 7071234567</li>
-                    <li><i class="fa fa-envelope"></i> volunteerng@gmail.com</li>
-                </ul>
-            </nav>
+      <div class="container">
+        <div id="branding">
+          <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp; &nbsp;
+          <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp; &nbsp;
+          <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
+          <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
         </div>
+        <nav>
+          <ul>
+            <li class="current"><i class="fa fa-phone"></i> +234 7071234567</li>
+            <li><i class="fa fa-envelope"></i> volunteerng@gmail.com</li>
+          </ul>
+        </nav>
+      </div>
     </div>
 
     <!-- Header -->
@@ -131,13 +130,8 @@
                 <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp; &nbsp;
                 <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp; &nbsp;
             </div>
-
-
-
-
         </div>
     </section>
 
 </body>
-
 </html>
