--- a/login.html
+++ b/login.html
@@ -1,23 +1,38 @@
 <!DOCTYPE html>
 <html lang=en>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+        <title>Volunteer NG | Login</title>
+        <!-- <link rel="stylesheet" href="./css/style.css" /> -->
+        <link href="css/login.css" rel="stylesheet" />
+        <link href="css/bootstrap.min.css" rel="stylesheet" />
+        <!-- <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" /> -->
+        <!-- <link href="./css/fontawesome/css/brands.css" rel="stylesheet" /> -->
+        <!-- <link href="./css/fontawesome/css/solid.css" rel="stylesheet" /> -->
+        <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
 
-<head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Volunteer NG | Login</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
-    <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
-    <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
-    <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
+    </head>
 
-</head>
-
-<body class="moving-volunteer">
-    <div class="container">
-
-    </div>
-    </div>
-
+    <body>
+        <div class="login-container">
+            <h1>Welcome Back</h1>
+            <form action="">
+                <div class="form-group">
+                    <label>Email</label>
+                    <input type="email" placeholder="Email" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label>Password</label>
+                    <input type="password" placeholder="Password" class="form-control" />
+                </div>
+                <a class="forgot" href="#">Forgot Password?</a>
+                <div class="form-group">
+                    <button type="submit" class="btn btn-success btn-block btn-lg" id="btn-color">Log In</button>
+                </div>
+                <p class="signup">Dont have an account yet? <a class="red-text" href="#">Sign Up</a></p>
+            </form>
+        </div>
+    </body>
 </html>
