Updates on home page and team page
#Home page link was added to the company logo on the navigation bar of the home page and the team page.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
   <header>
     <div class="container">
       <div id="branding">
-        <img src="images/logo.png" width="120" height="70" />
+        <a href="index.html">
+          <img src="images/logo.png" width="120" height="70" />
+        </a>
       </div>
       <nav>
         <ul>
