--- a/team/team.html
+++ b/team/team.html
@@ -34,7 +34,9 @@
   <header>
     <div class="second-nav">
       <div id="branding">
-        <img src="../images/logo.png" width="120" height="70" />
+        <a href="index.html">
+          <img src="../images/logo.png" width="120" height="70" />
+        </a>
       </div>
       <nav col-6>
         <ul>
