added logo to the login page

--- a/login.html
+++ b/login.html
@@ -17,6 +17,9 @@
 
     <body>
         <div class="login-container">
+            <span class="logo-img">
+                <img src="images/logos/Volunteerngwe.png" width="150px" />
+            </span>
             <h1>Welcome Back</h1>
             <form action="">
                 <div class="form-group">
