--- a/payment.html
+++ b/payment.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>VolunteerNG | Our Team</title>
+    <title>VolunteerNG | Donate</title>
     <link rel="stylesheet" href="./css/style.css" />
     <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
@@ -139,7 +139,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="entities.html">Entities</a></li>
                     <li><a href="about.html">About</a></li>
-                    <li class="current"><a href="team.html">The Team</a></li>
+                    <li><a href="team.html">The Team</a></li>
                     <li class="auth_button"><a href="login.html"> <i class="fa fa-user"></i> Login</a></li>
                     <li class="auth_button"><a href="signup.html"> <i class="fa fa-person-booth"></i> Sign Up</a></li>
                 </ul>
@@ -148,8 +148,18 @@
     </header>
 
     <section id="team-header">
-        <h1>Thank You!</h1>
-        <p>You're just one step away from changing the future, Thank you for Donating!</p>
+        <h1>Welcome to the page for World Changers!</h1>
+        <p>
+            Statistics show that about 7.1 million people in Nigeria are in need of humanitarian
+            assistance. Your donations go a long way in helping a child, a teenager, an adult or the
+            elderly live a better life. <br><br>
+            About 80 percent of Small and Medium Enterprises, SMEs, in Nigeria fail within the first five
+            years of their existence due to lack of experience and other wrong business practices.
+        </p>
+        <br />
+        <h5>
+            You're just one step from changing the future!!!
+        </h5>
     </section>
 
     <div class="container">
