--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
   <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
-  <link rel="stylesheet" href="./team/team.css" />
+  <link rel="stylesheet" href="./css/team.css" />
   <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
   <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
 </head>
@@ -40,9 +40,10 @@
           <li class="current"><a href="index.html">Home</a></li>
           <li><a href="entities.html">Entities</a></li>
           <li><a href="about.html">About</a></li>
-          <li><a href="team/team.html">The Team</a></li>
+          <li><a href="team.html">The Team</a></li>
           <li class="auth_button">
-            <a href="login.html"> <i class="fa fa-user"></i> Login</a>
+            <a href="login.html"> <i class="fa fa-user"></i>
+              Login</a>
           </li>
           <li class="auth_button">
             <a href="signup.html">
@@ -168,6 +169,53 @@
       </div>
     </div>
   </section>
+
+  <footer>
+    <div class="footer">
+      <div class="col-3">
+        <img src="images/volunteerNG_white_full.png" height="100" width="130"> <br>
+        <a href=""><i class="fa fa-phone"></i>+234 7071234567</a>
+        <a href=""><i class="fa fa-envelope"></i>volunteerng@gmail.com</a>
+        <a href=""><i class="fas fa-map-marker"></i>Find Us</a>
+      </div>
+      <div class="col-3">
+        <h3>Donations</h3>
+        <ul>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Food Donation</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Money Donation</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Water Supply</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Outfit Donation</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Food Item Donation</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Medical Donations</li>
+        </ul>
+      </div>
+      <div class="col-3">
+        <h3>Quick Links</h3>
+        <ul>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Our Team</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Testimonies</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; Gallery</li>
+          <li><i class="fas fa-arrow-right"></i>&nbsp; About Us</li>
+      </div>
+      <div>
+        <h3>Stay Updated</h3>
+        <span>Subscribe to our newsletter</span>
+        <div class="input-field">
+          <form>
+            <input type="text">
+            <span class="submit"><i class="fas fa-arrow-right"></i></span>
+          </form>
+        </div>
+        <div class="inline">
+          <a href=""><i class="fab fa-facebook"></i> </a> &nbsp; &nbsp;
+          <a href=""><i class="fab fa-instagram"></i> </a> &nbsp; &nbsp;
+          <a href=""><i class="fab fa-twitter"></i> </a> &nbsp; &nbsp;
+          <a href=""><i class="fab fa-youtube"></i> </a> &nbsp; &nbsp;
+        </div>
+      </div>
+    </div>
+  </footer>
+
 </body>
 
 </html>
