--- a/login.html
+++ b/login.html
@@ -5,18 +5,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Volunteer NG | Login</title>
-    <link rel="stylesheet" href="./css/style.css" />
+    <title>Volunteer NG | Login Up</title>
+    <link rel="stylesheet" href="./css/signup.css" />
     <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
     <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
     <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
-    <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
 
 </head>
 
 <body class="moving-volunteer">
-    <div class="container">
+    <div class="firstContainer">
+        <h1>Welcome to <span>VOLUNTEER.NG</span></h1>
+        <div>
+            <hr class="horizontalLine">
+        </div>
+        <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+            alteration in some form, by injected humour randomised words which don't look even slightly believeable.
+        </p>
+    </div>
+    <div class="secondContainer">
+        <h2>Login</h2>
+        <hr class="horizontalLine2">
+        <p>Don't have an account? It takes less than a minute. <a href="signup.html">Sign Up.</a></p>
+        <form action="">
+            <input type="email" placeholder="Email address" required>
+            <input type="password" placeholder="Password" required>
 
+            <button type="submit">LOGIN</button>
+        </form>
     </div>
     </div>
 
