Added "Our partners" Section to the homepage

--- a/index.html
+++ b/index.html
@@ -168,6 +168,26 @@
       </div>
     </div>
   </section>
+
+  <!-- Our Partners -->
+
+    <section id="boxxes">
+      <div class="container">
+        <h2 style="text-align: center">Our Partners</h2>
+        <div class="boxx">
+          <img src="./images/TheHNGInternship-e1524228565227.png" />
+          <div style="clear: both"></div>
+        </div>
+        <div class="boxx">
+          <img src="./images/download.jpeg" />
+          <div style="clear: both"></div>
+        </div>
+        <div class="boxx">
+          <img src="./images/images.jpeg" />
+          <div style="clear: both"></div>
+        </div>
+      </div>
+    </section>
 </body>
 
 </html>
