Made a few changes to prevent redundancy

--- a/sign-in.html
+++ b/sign-in.html
@@ -20,7 +20,7 @@
 <body>
 
     <head>
-        <div class="container" id="container">
+        <div class="container">
             <div class="form-container sign-up-container">
                 <form action="#">
                     <!--Signup-->
@@ -67,7 +67,7 @@
                         <p id="change">Enter your personal details and start your journey with us</p>
                         <button class="ghost" id="signIn">Sign In</button>
                     </div>
-                    <!--SignIn-->
+                    <!--Sign Up-->
                     <div class="overlay-panel overlay-right">
                         <h1>Welcome Back to Volunteer.Ng!</h1>
                         <p>To stay connected with us please login with your personal info</p>
