made syntactic changes to the home page to look much better

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
                         <a href="sign-in.html"> <i class="fa fa-user"></i>
-                            Sign In | Sign Up</a>
+                            Seek Donation</a>
                     </li>
                 </ul>
             </nav>
@@ -58,13 +58,10 @@
         <div class="container">
             <h1>You can make a difference!</h1>
             <p>Commited to making the World a better place for Everyone</p>
-            <p>
-
-                <a href="payment.html" class="main_link_button">
-                    <i class="fa fa-heart"></i> Donate</a>
+            <p><a href="payment.html" class="main_link_button">
+                    <i class="fa fa-heart"></i>Donate</a>
                 <a href="signup.php" class="main_link_button">
-                    <i class="fa fa-handshake"></i> I Need a Volunteer</a>
-            </p>
+                    <i class="fa fa-handshake"></i>I Need a Volunteer</a></p>
         </div>
     </section>
 
@@ -180,20 +177,20 @@
     <h1 style="text-align: center">Our Sponsors</h1> <br>
     <div class="sponsors">
         <div class="col-4">
-            <img src="images/flutterwave.png" width="70%">
+            <img src="images/flutterwave.png">
         </div>
         <div class="col-4">
-            <img src="images/hng.png" width="70%">
+            <img src="images/hng.png">
         </div>
         <div class="col-4">
-            <img src="images/start_ng.png" width="70%">
+            <img src="images/start_ng.png">
         </div>
     </div>
 
     <footer>
         <div class="footer">
             <div class="col-3">
-                <img src="images/volunteerNG_white_full.png" height="100" width="130"> <br>
+                <img src="images/volunteerNG_white_full.png" height="50" width="80"> <br>
                 <a href=""><i class="fa fa-phone"></i>+234 7071234567</a>
                 <a href=""><i class="fa fa-envelope"></i>volunteerng@gmail.com</a>
                 <a href=""><i class="fas fa-map-marker"></i>Find Us</a>
