Added Complete pyment pages

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <nav>
                 <ul>
                     <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="entities.php">Entities</a></li>
+                    <li><a href="entities.html">Entities</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
@@ -84,7 +84,7 @@
                             Lorem ipsum dolor adipisicing elit. Onnumquam reiciendisexplicabo consequatur, at excepturi
                             tempore itaque odio omnis unde? Placeat voluptatum temporibus sint excepturi!
                         </p>
-                        <a href="" class="donate-button">Donate</a>
+                        <a href="entities.html" class="donate-button">Donate</a>
                     </div>
                 </div>
                 <div class='column'>
@@ -96,7 +96,7 @@
                             In
                             hic accusamus repellendus tenetur eos nostrum illo? Eaque.
                         </p>
-                        <a href="#" class="donate-button">Donate</a>
+                        <a href="material-gift.html" class="donate-button">Donate</a>
                     </div>
                 </div>
                 <div class='column'>
@@ -108,7 +108,7 @@
                             minus
                             et iure, obcaecati eaque quam velit voluptatibus labore. Adipisci?
                         </p>
-                        <a href="" class="donate-button">Donate</a>
+                        <a href="render-a-service.html" class="donate-button">Donate</a>
                     </div>
                 </div>
             </div>
