--- a/merge-index.html
+++ b/merge-index.html
@@ -42,7 +42,7 @@
             <nav>
                 <ul>
                     <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="entities.php">Entities</a></li>
+                    <li><a href="entities.html">Entities</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
