--- a/team.html
+++ b/team.html
@@ -39,15 +39,11 @@
       <nav col-6>
         <ul>
           <li><a href="index.html">Home</a></li>
-          <li><a href="entities.php">Entities</a></li>
+          <li><a href="entities.html">Entities</a></li>
           <li><a href="about.html">About</a></li>
           <li class="current"><a href="team.html">The Team</a></li>
           <li class="auth_button">
-            <a href="login.php"> <i class="fa fa-user"></i> Login</a>
-          </li>
-          <li class="auth_button">
-            <a href="signup.php">
-              <i class="fa fa-person-booth"></i> Sign Up</a>
+            <a href="sign-in.html"> <i class="fa fa-user"></i> Login | Sign Up</a>
           </li>
         </ul>
       </nav>
