--- a/about.html
+++ b/about.html
@@ -33,21 +33,19 @@
     <header>
         <div class="container">
             <div id="branding">
-                <img src="images/logo.png" width="120" height="70" />
+                <a href="index.html">
+                    <img src="images/logo.png" width="165" height="70" />
+                </a>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
+                    <li class="current"><a href="index.html">Home</a></li>
                     <li><a href="entities.html">Entities</a></li>
-                    <li class="current"><a href="about.html">About</a></li>
+                    <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
-                        <a href="login.html"> <i class="fa fa-user"></i>
-                            Login</a>
-                    </li>
-                    <li class="auth_button">
-                        <a href="signup.html">
-                            <i class="fa fa-person-booth"></i> Sign Up</a>
+                        <a href="sign-in.html"> <i class="fa fa-user"></i>
+                            Sign In | Sign Up</a>
                     </li>
                 </ul>
             </nav>
