--- a/about.html
+++ b/about.html
@@ -39,9 +39,9 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="entities.html">Entities</a></li>
-                    <li><a href="about.html">About</a></li>
+                    <li class="current"><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
                         <a href="sign-in.html"> <i class="fa fa-user"></i>
