--- a/entities.html
+++ b/entities.html
@@ -42,8 +42,8 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
-                    <li><a href="entities.html">Entities</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li class="current"><a href="entities.html">Entities</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
