--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>Volunteer NG</title>
     <link rel="stylesheet" href="./css/howYouCanHelp.css" />
     <link rel="stylesheet" href="./css/style.css" />
-    <link href="./css/fontawesome/css/fontawesome.css" rel="stylesheet" />
-    <link href="./css/fontawesome/css/brands.css" rel="stylesheet" />
+    <link href="./css/fontawesome/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/team.css" />
-    <link href="./css/fontawesome/css/solid.css" rel="stylesheet" />
     <link rel="icon" href="images/favicon.ico" sizes="16x16" type="image/png" />
 </head>
 
@@ -45,7 +43,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
-                        <a href="sign-in.html"> <i class="fa fa-user"></i>
+                        <a href="sign-in.html"> <i class="fa fa-user white-fa"></i>
                             Sign In | Sign Up</a>
                     </li>
                 </ul>
@@ -60,10 +58,10 @@
             <p>Commited to making the World a better place for Everyone</p>
             <p>
 
-                <a href="payment.html" class="main_link_button">
-                    <i class="fa fa-heart"></i> Donate</a>
+                <a href="make-payment.html" class="main_link_button">
+                    <i class="fa fa-heart white-fa"></i> Donate</a>
                 <a href="signup.php" class="main_link_button">
-                    <i class="fa fa-handshake"></i> I Need a Volunteer</a>
+                    <i class="fas fa-hand-holding-heart white-fa"></i> I Need a Volunteer</a>
             </p>
         </div>
     </section>
