--- a/make-payment.html
+++ b/make-payment.html
@@ -40,7 +40,7 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="entities.html">Entities</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
@@ -66,11 +66,11 @@
             <div id="midmenuwhite"> <i class="fa fa-money-bill"></i> Money Donations</div>
         </a>
         <a href="render-a-service.html">
-            <div class="midmenugreen"> <i class="fas fa-hand-holding-heart" style=" color: white"></i> Render A Service
+            <div class="midmenugreen"> <i class="fas fa-hand-holding-heart  white-fa"></i> Render A Service
             </div>
         </a>
         <a href="material-gift.html">
-            <div class="midmenugreen"> <i class="fa fa-gift" style="color: white"></i> Material Gift</div>
+            <div class="midmenugreen"> <i class="fa fa-gift white-fa"></i> Material Gift</div>
         </a>
         <div class="break"></div>
 
