--- a/material-gift.html
+++ b/material-gift.html
@@ -43,7 +43,7 @@
             </div>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="entities.html">Entities</a></li>
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
@@ -66,10 +66,10 @@
 
         <div class="how">How do you wish to <a href="">donate?</a></div>
         <a href="make-payment.html">
-            <div class="midmenugreen"> <i class="fa fa-money-bill" style=" color: white"></i> Money Donations</div>
+            <div class="midmenugreen"> <i class="fa fa-money-bill  white-fa"></i> Money Donations</div>
         </a>
         <a href="render-a-service.html">
-            <div class="midmenugreen"> <i class="fas fa-hand-holding-heart" style="color: white"></i> Render A Service
+            <div class="midmenugreen"> <i class="fas fa-hand-holding-heart  white-fa"></i> Render A Service
             </div>
         </a>
         <a href="material-gift.html">
