--- a/render-a-service.html
+++ b/render-a-service.html
@@ -43,12 +43,12 @@
       </div>
       <nav>
         <ul>
-          <li class="current"><a href="index.html">Home</a></li>
+          <li><a href="index.html">Home</a></li>
           <li><a href="entities.html">Entities</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="team.html">The Team</a></li>
           <li class="auth_button">
-            <a href="sign-in.html"> <i class="fa fa-user" style="color: white"></i>
+            <a href="sign-in.html"> <i class="fa fa-user  white-fa"></i>
               Sign In | Sign Up</a>
           </li>
         </ul>
@@ -66,13 +66,13 @@
 
     <div class="how">How do you wish to <a href="">donate?</a></div>
     <a href="make-payment.html">
-      <div class="midmenugreen"> <i class="fa fa-money-bill" style=" color: white"></i> Money Donations</div>
+      <div class="midmenugreen"> <i class="fa fa-money-bill  white-fa"></i> Money Donations</div>
     </a>
     <a href="render-a-service.html">
       <div id="midmenuwhite"> <i class="fas fa-hand-holding-heart"></i> Render A Service</div>
     </a>
     <a href="material-gift.html">
-      <div class="midmenugreen"> <i class="fa fa-gift" style="color: white"></i> Material Gift</div>
+      <div class="midmenugreen"> <i class="fa fa-gift  white-fa"></i> Material Gift</div>
     </a>
     <div class="break"></div>
 
