--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </div>
                 <div class='column'>
                     <div class='col-2-of-3'>
-                        <img src="images/giftbox (1).svg" alt="giftbox" class=" help-image">
+                        <img src="images/giftbox.svg" alt="giftbox" class=" help-image">
                         <h2 class="heading-tertiary  u-margin-top-small u-margin-bottom-small">Give Material</h2>
                         <p class="help-text">
                             Lorem ipsum dolor sit amet consectetur adipisicing elit.cum, facere velit repellendus sequi!
