--- a/about.html
+++ b/about.html
@@ -44,7 +44,7 @@
                     <li class="current"><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
-                        <a href="sign-in.html"> <i class="fa fa-user"></i>
+                        <a href="sign-in.php"> <i class="fa fa-user"></i>
                             Sign In | Sign Up</a>
                     </li>
                 </ul>
