--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
-                        <a href="sign-in.html"> <i class="fa fa-user white-fa"></i>
+                        <a href="sign-in.php"> <i class="fa fa-user white-fa"></i>
                             Sign In | Sign Up</a>
                     </li>
                 </ul>
