--- a/material-gift.html
+++ b/material-gift.html
@@ -48,7 +48,7 @@
                     <li><a href="about.html">About</a></li>
                     <li><a href="team.html">The Team</a></li>
                     <li class="auth_button">
-                        <a href="sign-in.html"> <i class="fa fa-user" style="color: white"></i>
+                        <a href="sign-in.php"> <i class="fa fa-user" style="color: white"></i>
                             Sign In | Sign Up</a>
                     </li>
                 </ul>
