--- a/team.html
+++ b/team.html
@@ -43,7 +43,7 @@
           <li><a href="about.html">About</a></li>
           <li class="current"><a href="team.html">The Team</a></li>
           <li class="auth_button">
-            <a href="sign-in.html"> <i class="fa fa-user"></i> Login | Sign Up</a>
+            <a href="sign-in.php"> <i class="fa fa-user"></i> Login | Sign Up</a>
           </li>
         </ul>
       </nav>
