I worked on the page that contains gallery of previous donations and pictures (Link is in the footer).

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
             <div class="col-3">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><i class="fas fa-arrow-right"></i>&nbsp; Our Team</li>
-                    <li><i class="fas fa-arrow-right"></i>&nbsp; Testimonies</li>
-                    <li><i class="fas fa-arrow-right"></i>&nbsp; Gallery</li>
-                    <li><i class="fas fa-arrow-right"></i>&nbsp; About Us</li>
+                    <li><a href="#" class=" fas fa-arrow-right">&nbsp; Our Team </a> </li>
+                    <li><a href="#" class="fas fa-arrow-right">&nbsp; Testimonies</a></li>
+                    <li><a href="gallery.html" class="fas fa-arrow-right">&nbsp;Gallery</a></li>
+                    <li><a href="#" class="fas fa-arrow-right">&nbsp; About Us</a></li>
             </div>
             <div>
                 <h3>Stay Updated</h3>
